grammar/MarkdownParser.py
# Generated from ./grammar/Markdown.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class MarkdownParser ( Parser ):

    grammarFileName = "Markdown.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "'['", "']'", "'#'", "'*'", 
                     "'**'", "'***'", "<INVALID>", "' '" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "SYMBOLS", "SPACE", "TEXT", "WS", "NEWLINE" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_newline = 2
    RULE_url = 3
    RULE_linked_text = 4
    RULE_link = 5
    RULE_plaintext = 6
    RULE_para = 7
    RULE_text = 8
    RULE_heading = 9
    RULE_italic = 10
    RULE_bold = 11
    RULE_bolditalic = 12

    ruleNames =  [ "program", "statement", "newline", "url", "linked_text", 
                   "link", "plaintext", "para", "text", "heading", "italic", 
                   "bold", "bolditalic" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    SYMBOLS=9
    SPACE=10
    TEXT=11
    WS=12
    NEWLINE=13

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MarkdownParser.StatementContext)
            else:
                return self.getTypedRuleContext(MarkdownParser.StatementContext,i)


        def getRuleIndex(self):
            return MarkdownParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MarkdownParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 29
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1+1:
                    self.state = 26
                    self.statement() 
                self.state = 31
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def heading(self):
            return self.getTypedRuleContext(MarkdownParser.HeadingContext,0)


        def italic(self):
            return self.getTypedRuleContext(MarkdownParser.ItalicContext,0)


        def bold(self):
            return self.getTypedRuleContext(MarkdownParser.BoldContext,0)


        def bolditalic(self):
            return self.getTypedRuleContext(MarkdownParser.BolditalicContext,0)


        def para(self):
            return self.getTypedRuleContext(MarkdownParser.ParaContext,0)


        def newline(self):
            return self.getTypedRuleContext(MarkdownParser.NewlineContext,0)


        def getRuleIndex(self):
            return MarkdownParser.RULE_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = MarkdownParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 38
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 32
                self.heading()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 33
                self.italic()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 34
                self.bold()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 35
                self.bolditalic()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 36
                self.para()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 37
                self.newline()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NewlineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEWLINE(self):
            return self.getToken(MarkdownParser.NEWLINE, 0)

        def getRuleIndex(self):
            return MarkdownParser.RULE_newline

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNewline" ):
                return visitor.visitNewline(self)
            else:
                return visitor.visitChildren(self)




    def newline(self):

        localctx = MarkdownParser.NewlineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_newline)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            self.match(MarkdownParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class UrlContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TEXT(self, i:int=None):
            if i is None:
                return self.getTokens(MarkdownParser.TEXT)
            else:
                return self.getToken(MarkdownParser.TEXT, i)

        def getRuleIndex(self):
            return MarkdownParser.RULE_url

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUrl" ):
                return visitor.visitUrl(self)
            else:
                return visitor.visitChildren(self)




    def url(self):

        localctx = MarkdownParser.UrlContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_url)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self.match(MarkdownParser.T__0)
            self.state = 44 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 43
                self.match(MarkdownParser.TEXT)
                self.state = 46 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==MarkdownParser.TEXT):
                    break

            self.state = 48
            self.match(MarkdownParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Linked_textContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TEXT(self, i:int=None):
            if i is None:
                return self.getTokens(MarkdownParser.TEXT)
            else:
                return self.getToken(MarkdownParser.TEXT, i)

        def getRuleIndex(self):
            return MarkdownParser.RULE_linked_text

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLinked_text" ):
                return visitor.visitLinked_text(self)
            else:
                return visitor.visitChildren(self)




    def linked_text(self):

        localctx = MarkdownParser.Linked_textContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_linked_text)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.match(MarkdownParser.T__2)
            self.state = 52 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 51
                self.match(MarkdownParser.TEXT)
                self.state = 54 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==MarkdownParser.TEXT):
                    break

            self.state = 56
            self.match(MarkdownParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LinkContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def linked_text(self):
            return self.getTypedRuleContext(MarkdownParser.Linked_textContext,0)


        def url(self):
            return self.getTypedRuleContext(MarkdownParser.UrlContext,0)


        def getRuleIndex(self):
            return MarkdownParser.RULE_link

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLink" ):
                return visitor.visitLink(self)
            else:
                return visitor.visitChildren(self)




    def link(self):

        localctx = MarkdownParser.LinkContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_link)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.linked_text()
            self.state = 59
            self.url()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PlaintextContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TEXT(self):
            return self.getToken(MarkdownParser.TEXT, 0)

        def SPACE(self):
            return self.getToken(MarkdownParser.SPACE, 0)

        def getRuleIndex(self):
            return MarkdownParser.RULE_plaintext

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPlaintext" ):
                return visitor.visitPlaintext(self)
            else:
                return visitor.visitChildren(self)




    def plaintext(self):

        localctx = MarkdownParser.PlaintextContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_plaintext)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            _la = self._input.LA(1)
            if not(_la==MarkdownParser.SPACE or _la==MarkdownParser.TEXT):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def link(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MarkdownParser.LinkContext)
            else:
                return self.getTypedRuleContext(MarkdownParser.LinkContext,i)


        def plaintext(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MarkdownParser.PlaintextContext)
            else:
                return self.getTypedRuleContext(MarkdownParser.PlaintextContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(MarkdownParser.NEWLINE)
            else:
                return self.getToken(MarkdownParser.NEWLINE, i)

        def getRuleIndex(self):
            return MarkdownParser.RULE_para

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPara" ):
                return visitor.visitPara(self)
            else:
                return visitor.visitChildren(self)




    def para(self):

        localctx = MarkdownParser.ParaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_para)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 66
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [MarkdownParser.T__2]:
                        self.state = 63
                        self.link()
                        pass
                    elif token in [MarkdownParser.SPACE, MarkdownParser.TEXT]:
                        self.state = 64
                        self.plaintext()
                        pass
                    elif token in [MarkdownParser.NEWLINE]:
                        self.state = 65
                        self.match(MarkdownParser.NEWLINE)
                        pass
                    else:
                        raise NoViableAltException(self)


                else:
                    raise NoViableAltException(self)
                self.state = 68 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TextContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def para(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MarkdownParser.ParaContext)
            else:
                return self.getTypedRuleContext(MarkdownParser.ParaContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(MarkdownParser.NEWLINE)
            else:
                return self.getToken(MarkdownParser.NEWLINE, i)

        def getRuleIndex(self):
            return MarkdownParser.RULE_text

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitText" ):
                return visitor.visitText(self)
            else:
                return visitor.visitChildren(self)




    def text(self):

        localctx = MarkdownParser.TextContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_text)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 72
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                if la_ == 1:
                    self.state = 70
                    self.para()
                    pass

                elif la_ == 2:
                    self.state = 71
                    self.match(MarkdownParser.NEWLINE)
                    pass


                self.state = 74 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MarkdownParser.T__2) | (1 << MarkdownParser.SPACE) | (1 << MarkdownParser.TEXT) | (1 << MarkdownParser.NEWLINE))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class HeadingContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def plaintext(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MarkdownParser.PlaintextContext)
            else:
                return self.getTypedRuleContext(MarkdownParser.PlaintextContext,i)


        def link(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MarkdownParser.LinkContext)
            else:
                return self.getTypedRuleContext(MarkdownParser.LinkContext,i)


        def getRuleIndex(self):
            return MarkdownParser.RULE_heading

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHeading" ):
                return visitor.visitHeading(self)
            else:
                return visitor.visitChildren(self)




    def heading(self):

        localctx = MarkdownParser.HeadingContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_heading)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 76
                    self.match(MarkdownParser.T__4)

                else:
                    raise NoViableAltException(self)
                self.state = 79 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

            self.state = 85
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 83
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [MarkdownParser.SPACE, MarkdownParser.TEXT]:
                        self.state = 81
                        self.plaintext()
                        pass
                    elif token in [MarkdownParser.T__2]:
                        self.state = 82
                        self.link()
                        pass
                    else:
                        raise NoViableAltException(self)
             
                self.state = 87
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ItalicContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def plaintext(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MarkdownParser.PlaintextContext)
            else:
                return self.getTypedRuleContext(MarkdownParser.PlaintextContext,i)


        def getRuleIndex(self):
            return MarkdownParser.RULE_italic

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitItalic" ):
                return visitor.visitItalic(self)
            else:
                return visitor.visitChildren(self)




    def italic(self):

        localctx = MarkdownParser.ItalicContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_italic)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.match(MarkdownParser.T__5)
            self.state = 90 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 89
                self.plaintext()
                self.state = 92 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==MarkdownParser.SPACE or _la==MarkdownParser.TEXT):
                    break

            self.state = 94
            self.match(MarkdownParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BoldContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def plaintext(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MarkdownParser.PlaintextContext)
            else:
                return self.getTypedRuleContext(MarkdownParser.PlaintextContext,i)


        def getRuleIndex(self):
            return MarkdownParser.RULE_bold

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBold" ):
                return visitor.visitBold(self)
            else:
                return visitor.visitChildren(self)




    def bold(self):

        localctx = MarkdownParser.BoldContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_bold)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.match(MarkdownParser.T__6)
            self.state = 98 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 97
                self.plaintext()
                self.state = 100 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==MarkdownParser.SPACE or _la==MarkdownParser.TEXT):
                    break

            self.state = 102
            self.match(MarkdownParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BolditalicContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def plaintext(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MarkdownParser.PlaintextContext)
            else:
                return self.getTypedRuleContext(MarkdownParser.PlaintextContext,i)


        def getRuleIndex(self):
            return MarkdownParser.RULE_bolditalic

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBolditalic" ):
                return visitor.visitBolditalic(self)
            else:
                return visitor.visitChildren(self)




    def bolditalic(self):

        localctx = MarkdownParser.BolditalicContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_bolditalic)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(MarkdownParser.T__7)
            self.state = 106 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 105
                self.plaintext()
                self.state = 108 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==MarkdownParser.SPACE or _la==MarkdownParser.TEXT):
                    break

            self.state = 110
            self.match(MarkdownParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





